updated property `resultUrl`

--- a/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
@@ -3644,7 +3644,7 @@
           },
           "x-ms-identifiers": []
         },
-        "resultUri": {
+        "resultUrl": {
           "type": "string",
           "description": "The URL to use in order to download the exported project."
         }
@@ -4564,7 +4564,7 @@
           "type": "string",
           "description": "The model ID."
         },
-        "lastTrainedOn": {
+        "lastTrainedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last trained date time of the model."
@@ -4591,7 +4591,7 @@
       "required": [
         "label",
         "modelId",
-        "lastTrainedOn",
+        "lastTrainedDateTime",
         "lastTrainingDurationInSeconds",
         "modelExpirationDate",
         "modelTrainingConfigVersion",
