--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
@@ -2208,7 +2208,7 @@
           },
           "x-ms-identifiers": []
         },
-        "resultUri": {
+        "resultUrl": {
           "type": "string",
           "description": "The URL to use in order to download the exported project."
         }
@@ -3017,7 +3017,7 @@
           "type": "string",
           "description": "The model ID."
         },
-        "lastTrainedOn": {
+        "lastTrainedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last trained date time of the model."
@@ -3044,7 +3044,7 @@
       "required": [
         "label",
         "modelId",
-        "lastTrainedOn",
+        "lastTrainedDateTime",
         "lastTrainingDurationInSeconds",
         "modelExpirationDate",
         "modelTrainingConfigVersion",
