--- a/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
@@ -2779,7 +2779,7 @@
       "type": "object",
       "description": "Represents the options for assigning Azure resources to a project.",
       "properties": {
-        "metadata": {
+        "resourcesMetadata": {
           "type": "array",
           "description": "Represents the metadata for the resources to be assigned.",
           "items": {
@@ -2789,14 +2789,14 @@
         }
       },
       "required": [
-        "metadata"
+        "resourcesMetadata"
       ]
     },
     "AnalyzeConversationAuthoringAssignedDeploymentResource": {
       "type": "object",
       "description": "Represents the assigned deployment resource.",
       "properties": {
-        "resourceId": {
+        "azureResourceId": {
           "type": "string",
           "description": "The resource ID.",
           "readOnly": true
@@ -2807,7 +2807,7 @@
         }
       },
       "required": [
-        "resourceId",
+        "azureResourceId",
         "region"
       ]
     },
@@ -2819,7 +2819,7 @@
           "type": "string",
           "description": "Represents the deployment name."
         },
-        "lastDeployedOn": {
+        "lastDeployedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "Represents deployment last deployed time."
@@ -2832,7 +2832,7 @@
       },
       "required": [
         "deploymentName",
-        "lastDeployedOn",
+        "lastDeployedDateTime",
         "deploymentExpirationDate"
       ]
     },
@@ -3476,7 +3476,7 @@
     "AnalyzeConversationAuthoringEvaluationJobResult": {
       "type": "object",
       "properties": {
-        "evaluationDetails": {
+        "evaluationOptions": {
           "$ref": "#/definitions/AnalyzeConversationAuthoringEvaluationOptions",
           "description": "Represents the options used running the evaluation."
         },
@@ -3495,7 +3495,7 @@
         }
       },
       "required": [
-        "evaluationDetails",
+        "evaluationOptions",
         "modelLabel",
         "trainingConfigVersion",
         "percentComplete"
@@ -3978,12 +3978,12 @@
           "type": "string",
           "description": "The model ID."
         },
-        "lastTrainedOn": {
+        "lastTrainedDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last trained date time of the model."
         },
-        "lastExportedModelOn": {
+        "lastExportedModelDateTime": {
           "type": "string",
           "format": "date-time",
           "description": "The last exported date time of the model."
@@ -4001,8 +4001,8 @@
       "required": [
         "exportedModelName",
         "modelId",
-        "lastTrainedOn",
-        "lastExportedModelOn",
+        "lastTrainedDateTime",
+        "lastExportedModelDateTime",
         "modelExpirationDate",
         "modelTrainingConfigVersion"
       ]
