--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
@@ -1786,6 +1786,12 @@
         "rawValue"
       ]
     },
+    "AnalyzeConversationAuthoringConfusionMatrixRow": {
+      "type": "object",
+      "additionalProperties": {
+        "$ref": "#/definitions/AnalyzeConversationAuthoringConfusionMatrixCell"
+      }
+    },
     "AnalyzeConversationAuthoringConversationExportedEntity": {
       "type": "object",
       "description": "Represents an entity with its components.",
@@ -2017,10 +2023,7 @@
           "type": "object",
           "description": "Represents the confusion matrix between two entities (the two entities can be the same). The matrix is between the entity that was labelled and the entity that was predicted.",
           "additionalProperties": {
-            "additionalProperties": {
-              "$ref": "#/definitions/AnalyzeConversationAuthoringConfusionMatrixCell"
-            },
-            "type": "object"
+            "$ref": "#/definitions/AnalyzeConversationAuthoringConfusionMatrixRow"
           }
         },
         "entities": {
@@ -2612,10 +2615,7 @@
           "type": "object",
           "description": "Represents the confusion matrix between two intents (the two intents can be the same). The matrix is between the intent that was labelled and the intent that was predicted.",
           "additionalProperties": {
-            "additionalProperties": {
-              "$ref": "#/definitions/AnalyzeConversationAuthoringConfusionMatrixCell"
-            },
-            "type": "object"
+            "$ref": "#/definitions/AnalyzeConversationAuthoringConfusionMatrixRow"
           }
         },
         "intents": {
