--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
@@ -2613,8 +2613,8 @@
           "type": "string",
           "description": "The category of the entity."
         },
-        "compositionMode": {
-          "$ref": "#/definitions/CompositionMode",
+        "compositionSetting": {
+          "$ref": "#/definitions/CompositionSetting",
           "description": "The behavior to follow when the entity's components overlap with each other."
         },
         "entities": {
@@ -4684,7 +4684,7 @@
       "format": "uuid",
       "description": "Universally Unique Identifier"
     },
-    "CompositionMode": {
+    "CompositionSetting": {
       "type": "string",
       "enum": [
         "returnLongestOverlap",
@@ -4693,7 +4693,7 @@
         "combineComponents"
       ],
       "x-ms-enum": {
-        "name": "CompositionMode",
+        "name": "CompositionSetting",
         "modelAsString": true,
         "values": [
           {
