--- a/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzedocuments.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzedocuments.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Microsoft Cognitive Language Service - Document Analysis",
+    "title": "Microsoft Cognitive Language Service - Document Analysis test",
     "version": "2024-11-15-preview",
     "description": "The language service API is a suite of natural language processing (NLP) skills built with best-in-class Microsoft machine learning algorithms.\nThe API can be used to analyze unstructured text for tasks such as sentiment analysis, key phrase extraction, language detection and question answering.\nFurther documentation can be found in <a href=\\\"https://learn.microsoft.com/azure/cognitive-services/language-service/overview\\\">https://learn.microsoft.com/azure/cognitive-services/language-service/overview</a>.0",
     "x-typespec-generated": [
