devided test jsons of Model into exportedModel and trainedModel

--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
@@ -1401,6 +1401,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "Successful Get Model": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetModel.json"
+          }
         }
       },
       "delete": {
@@ -1441,6 +1446,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Delete Model": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulDeleteModel.json"
           }
         }
       }
@@ -1502,6 +1512,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful Evaluation Project": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulEvaluationProject.json"
+          }
+        },
         "x-ms-long-running-operation": true
       }
     },
@@ -1551,6 +1566,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Load Snapshot": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulLoadSnapshot.json"
           }
         },
         "x-ms-long-running-operation": true
@@ -1605,6 +1625,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Evaluation Status": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetEvaluationStatus.json"
           }
         }
       }
@@ -1665,6 +1690,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful Get Model Evaluation": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetModelEvaluation.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1712,6 +1742,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Model Evaluation Summary": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetModelEvaluationSummary.json"
           }
         }
       }
@@ -1765,6 +1800,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Load Snapshot Status": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetLoadSnapshotStatus.json"
           }
         }
       }
