--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
@@ -1117,6 +1117,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "Successful Get Model": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetModel.json"
+          }
         }
       },
       "delete": {
@@ -1157,6 +1162,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Delete Model": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulDeleteModel.json"
           }
         }
       }
@@ -1207,6 +1217,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Load Snapshot": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulLoadSnapshot.json"
           }
         },
         "x-ms-long-running-operation": true
@@ -1268,6 +1283,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful Get Model Evaluation": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetModelEvaluation.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1315,6 +1335,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Model Evaluation Summary": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetModelEvaluationSummary.json"
           }
         }
       }
@@ -1368,6 +1393,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Load Snapshot Status": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetLoadSnapshotStatus.json"
           }
         }
       }
