--- a/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
@@ -1350,6 +1350,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "Successful Get Exported Model": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetExportedModel.json"
+          }
         }
       },
       "put": {
@@ -1407,6 +1412,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful Create Exported Model": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulCreateExportedModel.json"
+          }
+        },
         "x-ms-long-running-operation": true
       },
       "delete": {
@@ -1453,6 +1463,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Delete Exported Model": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulDeleteExportedModel.json"
           }
         },
         "x-ms-long-running-operation": true
@@ -1507,6 +1522,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Exported Model Status": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetExportedModelStatus.json"
           }
         }
       }
@@ -1661,6 +1681,11 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "Successful Get Model": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetModel.json"
+          }
         }
       },
       "delete": {
@@ -1701,6 +1726,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Delete Model": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulDeleteModel.json"
           }
         }
       }
@@ -1762,6 +1792,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful Evaluation Project": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulEvaluationProject.json"
+          }
+        },
         "x-ms-long-running-operation": true
       }
     },
@@ -1811,6 +1846,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Load Snapshot": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulLoadSnapshot.json"
           }
         },
         "x-ms-long-running-operation": true
@@ -1865,6 +1905,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Evaluation Status": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetEvaluationStatus.json"
           }
         }
       }
@@ -1925,6 +1970,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful Get Model Evaluation": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetModelEvaluation.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1972,6 +2022,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Model Evaluation Summary": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetModelEvaluationSummary.json"
           }
         }
       }
@@ -2025,6 +2080,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Load Snapshot Status": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetLoadSnapshotStatus.json"
           }
         }
       }
