modify some testing json

--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzetext-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzetext-authoring.json
@@ -778,6 +778,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulDeployProject": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulDeployProject.json"
+          }
+        },
         "x-ms-long-running-operation": true
       },
       "delete": {
@@ -824,6 +829,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "SuccessfulDeleteDeployment": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulDeleteDeployment.json"
           }
         },
         "x-ms-long-running-operation": true
@@ -1482,6 +1492,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "SuccessfulGetExportedModelManifest": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulGetExportedModelManifest.json"
           }
         }
       }
