--- a/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzetext-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzetext-authoring.json
@@ -895,6 +895,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulDeleteDeploymentFromResources": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulDeleteDeploymentFromResources.json"
+          }
+        },
         "x-ms-long-running-operation": true
       }
     },
@@ -1212,6 +1217,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "SuccessfulListExportedModels": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListExportedModels.json"
           }
         },
         "x-ms-pageable": {
