--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzetext-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzetext-authoring.json
@@ -983,6 +983,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulListModels": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListModels.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1353,6 +1358,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "SuccessfulListTrainingJobs": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListTrainingJobs.json"
           }
         },
         "x-ms-pageable": {
