--- a/specification/translation/Azure.AI.DocumentTranslation/tspconfig.yaml
+++ b/specification/translation/Azure.AI.DocumentTranslation/tspconfig.yaml
@@ -42,9 +42,9 @@ options:
     generate-sample-project: false
   "@azure-tools/typespec-ts":
     package-dir: "ai-translation-document-rest"
-    generateMetadata: true
-    generateTest: false
-    packageDetails:
+    generate-metadata: true
+    generate-test: false
+    package-details:
       name: "@azure-rest/ai-translation-document"
       description: "Microsoft Translation Document"
     flavor: azure
