Revert "update configs"
This reverts commit e33404d37170c8cee12ae0ea730fd1cbe1763700.

--- a/specification/translation/Azure.AI.DocumentTranslation/tspconfig.yaml
+++ b/specification/translation/Azure.AI.DocumentTranslation/tspconfig.yaml
@@ -42,9 +42,9 @@ options:
     generate-sample-project: false
   "@azure-tools/typespec-ts":
     package-dir: "ai-translation-document-rest"
-    generate-metadata: true
-    generate-test: false
-    package-details:
+    generateMetadata: true
+    generateTest: false
+    packageDetails:
       name: "@azure-rest/ai-translation-document"
       description: "Microsoft Translation Document"
     flavor: azure
