--- a/specification/translation/Azure.AI.TextTranslation/tspconfig.yaml
+++ b/specification/translation/Azure.AI.TextTranslation/tspconfig.yaml
@@ -38,9 +38,9 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "ai-translation-text-rest"
-    generate-metadata: false
-    generate-test: false
-    package-details:
+    generateMetadata: false
+    generateTest: false
+    packageDetails:
       name: "@azure-rest/ai-translation-text"
       description: "Microsoft Translation Text"
     flavor: azure
