added testing files for conversation runtime 2025-05-15 and modified the readme

--- a/specification/cognitiveservices/data-plane/Language/stable/2025-05-15/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2025-05-15/analyzeconversations.json
@@ -97,6 +97,17 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "SuccessfulAnalyzeConversations": {
+            "$ref": "./examples/SuccessfulAnalyzeConversations.json"
+          },
+          "SuccessfulAnalyzeConversationsArbitration": {
+            "$ref": "./examples/SuccessfulAnalyzeConversationsArbitration.json"
+          },
+          "SuccessfulAnalyzeConversationsArbitrationDirectTarget": {
+            "$ref": "./examples/SuccessfulAnalyzeConversationsArbitrationDirectTarget.json"
+          }
         }
       }
     },
@@ -140,6 +151,35 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "SuccessfulConversationPIICharacterMask": {
+            "$ref": "./examples/SuccessfulConversationPIICharacterMask.json"
+          },
+          "SuccessfulConversationPIIEntityMask": {
+            "$ref": "./examples/SuccessfulConversationPIIEntityMask.json"
+          },
+          "SuccessfulConversationPIIExclusionSubmit": {
+            "$ref": "./examples/SuccessfulConversationPIIExclusionSubmit.json"
+          },
+          "SuccessfulConversationPIINoMask": {
+            "$ref": "./examples/SuccessfulConversationPIINoMask.json"
+          },
+          "SuccessfulConversationPIIRedactionCharSubmit": {
+            "$ref": "./examples/SuccessfulConversationPIIRedactionCharSubmit.json"
+          },
+          "SuccessfulConversationPIISubmit": {
+            "$ref": "./examples/SuccessfulConversationPIISubmit.json"
+          },
+          "SuccessfulConversationSummarizationTaskSubmit": {
+            "$ref": "./examples/SuccessfulConversationSummarizationTaskSubmit.json"
+          },
+          "SuccessfulConversationSummarySubmit": {
+            "$ref": "./examples/SuccessfulConversationSummarySubmit.json"
+          },
+          "SuccessfulCustomConversationSummarizationTaskSubmit": {
+            "$ref": "./examples/SuccessfulCustomConversationSummarizationTaskSubmit.json"
           }
         },
         "x-ms-long-running-operation": true
@@ -189,6 +229,35 @@
               }
             }
           }
+        },
+        "x-ms-examples": {
+          "SuccessfulConversationPIICharacterMaskTaskStatusRequest": {
+            "$ref": "./examples/SuccessfulConversationPIICharacterMaskTaskStatusRequest.json"
+          },
+          "SuccessfulConversationPIIEntityMaskTaskStatusRequest": {
+            "$ref": "./examples/SuccessfulConversationPIIEntityMaskTaskStatusRequest.json"
+          },
+          "SuccessfulConversationPIIExclusionTaskStatusRequest": {
+            "$ref": "./examples/SuccessfulConversationPIIExclusionTaskStatusRequest.json"
+          },
+          "SuccessfulConversationPIINoMaskTaskStatusRequest": {
+            "$ref": "./examples/SuccessfulConversationPIINoMaskTaskStatusRequest.json"
+          },
+          "SuccessfulConversationPIIRedactionCharTaskStatusRequest": {
+            "$ref": "./examples/SuccessfulConversationPIIRedactionCharTaskStatusRequest.json"
+          },
+          "SuccessfulConversationPIITaskStatusRequest": {
+            "$ref": "./examples/SuccessfulConversationPIITaskStatusRequest.json"
+          },
+          "SuccessfulConversationSummarizationTaskResult": {
+            "$ref": "./examples/SuccessfulConversationSummarizationTaskResult.json"
+          },
+          "SuccessfulConversationSummarizationTaskStatusRequest": {
+            "$ref": "./examples/SuccessfulConversationSummarizationTaskStatusRequest.json"
+          },
+          "SuccessfulCustomConversationSummarizationTaskResult": {
+            "$ref": "./examples/SuccessfulCustomConversationSummarizationTaskResult.json"
+          }
         }
       }
     },
@@ -232,6 +301,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "SuccessfulAnalyzeConversationsJobsCancelRequest": {
+            "$ref": "./examples/SuccessfulAnalyzeConversationsJobsCancelRequest.json"
           }
         },
         "x-ms-long-running-operation": true
