added comments for Conversations Runtime 2025-05-15

--- a/specification/cognitiveservices/data-plane/Language/stable/2025-05-15/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2025-05-15/analyzeconversations.json
@@ -1032,6 +1032,7 @@
     },
     "BaseConversationTaskParameters": {
       "type": "object",
+      "description": "Input parameters base for a Conversation task.",
       "properties": {
         "projectName": {
           "type": "string",
@@ -1473,6 +1474,7 @@
     },
     "ConversationItemRange": {
       "type": "object",
+      "description": "The ranges of conversation items where this intent was identified.",
       "properties": {
         "offset": {
           "type": "integer",
@@ -2098,6 +2100,7 @@
     },
     "ConversationalAIAnalysis": {
       "type": "object",
+      "description": "Multiple multi-turn conversations analyzed.",
       "properties": {
         "id": {
           "type": "string",
@@ -2127,6 +2130,7 @@
     },
     "ConversationalAIAnalysisOptions": {
       "type": "object",
+      "description": "The input ConversationItem and its optional parameters",
       "properties": {
         "conversations": {
           "type": "array",
@@ -2142,6 +2146,7 @@
     },
     "ConversationalAIEntity": {
       "type": "object",
+      "description": "The entity associated with this intent.",
       "properties": {
         "name": {
           "type": "string",
@@ -2204,6 +2209,7 @@
     },
     "ConversationalAIIntent": {
       "type": "object",
+      "description": "The intent classification result for this conversation.",
       "properties": {
         "name": {
           "type": "string",
@@ -2271,6 +2277,7 @@
     },
     "ConversationalAIResult": {
       "type": "object",
+      "description": "Represents the conversational analysis response.",
       "properties": {
         "conversations": {
           "type": "array",
