adjust the tests for Conversation Authoring

--- a/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2023-04-15-preview/analyzeconversations-authoring.json
@@ -98,6 +98,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Projects": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListProjects.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -727,6 +732,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Deployments": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListDeployments.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1338,6 +1348,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Models": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListModels.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1840,6 +1855,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Deployment Resources": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListDeploymentResources.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -2109,6 +2129,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Training Jobs": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListTrainingJobs.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -2302,6 +2327,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Assigned Resource Deployments": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListAssignedResourceDeployments.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -2346,6 +2376,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Supported Languages": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetSupportedLanguages.json"
           }
         },
         "x-ms-pageable": {
@@ -2397,6 +2432,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful Get Supported Prebuilt Entities": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetSupportedPrebuiltEntities.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -2441,6 +2481,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Supported Training Config Versions": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetSupportedTrainingConfigVersions.json"
           }
         },
         "x-ms-pageable": {
