--- a/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzeconversations-authoring.json
@@ -98,6 +98,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Projects": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListProjects.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -727,6 +732,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Deployments": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListDeployments.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1287,6 +1297,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Exported Models": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListExportedModels.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1611,6 +1626,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful List Models": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListModels.json"
           }
         },
         "x-ms-pageable": {
@@ -2115,6 +2135,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Deployment Resources": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListDeploymentResources.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -2384,6 +2409,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Training Jobs": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListTrainingJobs.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -2577,6 +2607,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Assigned Resource Deployments": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListAssignedResourceDeployments.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -2621,6 +2656,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Supported Languages": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetSupportedLanguages.json"
           }
         },
         "x-ms-pageable": {
@@ -2672,6 +2712,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful Get Supported Prebuilt Entities": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetSupportedPrebuiltEntities.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -2716,6 +2761,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Supported Training Config Versions": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetSupportedTrainingConfigVersions.json"
           }
         },
         "x-ms-pageable": {
