--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzeconversations-authoring.json
@@ -98,6 +98,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Projects": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListProjects.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -564,6 +569,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful List Deployments": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListDeployments.json"
           }
         },
         "x-ms-pageable": {
@@ -1054,6 +1064,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Models": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListModels.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1433,6 +1448,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful List Training Jobs": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulListTrainingJobs.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1629,6 +1649,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful Get Supported Languages": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetSupportedLanguages.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1678,6 +1703,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "Successful Get Supported Prebuilt Entities": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetSupportedPrebuiltEntities.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1722,6 +1752,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "Successful Get Supported Training Config Versions": {
+            "$ref": "./examples/analyzeconversations-authoring/SuccessfulGetSupportedTrainingConfigVersions.json"
           }
         },
         "x-ms-pageable": {
